--- a/.babelrc
+++ b/.babelrc
@@ -1,24 +1,18 @@
 // This could be written a lot more easily using .babelrc.js but currently
 // not released. And the merging around the env option is broken
 // refs: https://github.com/babel/babel/issues/5276
+
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "browsers": ["last 2 versions", "ie >= 9"]
-      }
-    }],
-    "react",
-    "stage-2",
-  ],
-  "plugins": ["lodash", "inline-json-import"],
   "env": {
     "development": {
       "presets": [
         ["env", {
           "targets": {
-            "browsers": ["last 2 versions", "ie >= 9"]
-          }
+            "browsers": [
+              "last 2 versions",
+              "ie >= 9",
+            ],
+          },
         }],
         "react",
         "stage-2",
@@ -36,21 +30,64 @@
         "transform-regenerator"
       ]
     },
-    "es": {
+    "test": {
       "presets": [
         ["env", {
           "targets": {
-            "browsers": ["last 2 versions", "ie >= 9"]
+            "browsers": [
+              "last 2 versions",
+              "ie >= 9",
+            ],
           },
-          "modules": false
         }],
         "react",
         "stage-2",
       ],
-      "plugins": ["lodash", "inline-json-import"]
+      "plugins": [
+        "lodash",
+        "inline-json-import",
+      ],
+    },
+    "production": {
+      "presets": [
+        ["env", {
+          "targets": {
+            "browsers": [
+              "last 2 versions",
+              "ie >= 9",
+            ],
+          },
+        }],
+        "react",
+        "stage-2",
+      ],
+      "plugins": [
+        "lodash",
+        "inline-json-import",
+      ],
+    },
+    "es": {
+      "presets": [
+        ["env", {
+          "targets": {
+            "browsers": [
+              "last 2 versions",
+              "ie >= 9",
+            ],
+          },
+          "modules": false,
+        }],
+        "react",
+        "stage-2",
+      ],
+      "plugins": [
+        "lodash",
+        "inline-json-import",
+      ]
     }
   }
 }
+
 // Once we are using Babel 7 and babelrc.js, here's the code to use
 // const env = process.env.NODE_ENV || 'development';
 // const modules = process.env.MODULES || 'commonjs';
