--- a/packages/react-instantsearch/examples/react-native/package.json
+++ b/packages/react-instantsearch/examples/react-native/package.json
@@ -7,7 +7,7 @@
     "jest": "21.2.1",
     "jest-cli": "21.2.1",
     "jest-expo": "22.0.1",
-    "react-native-scripts": "1.5.0",
+    "react-native-scripts": "1.7.0",
     "react-test-renderer": "16.1.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -24,11 +24,14 @@
     "transformIgnorePatterns": [
       "node_modules/(?!react|@expo|expo|@ptomasroos|react-native-router-flux|mobx-react)"
     ],
-    "setupFiles": ["../../../../shim.js"]
+    "setupFiles": [
+      "../../../../shim.js",
+      "./shim-react-native.js"
+    ]
   },
   "dependencies": {
     "@ptomasroos/react-native-multi-slider": "^0.0.11",
-    "expo": "22.0.0",
+    "expo": "22.0.3",
     "lodash": "4.17.4",
     "native-base": "2.3.3",
     "prop-types": "15.5.8",
@@ -36,9 +39,9 @@
     "react-dom": "16.1.0",
     "react-instantsearch": "4.2.0",
     "react-instantsearch-theme-algolia": "4.2.0",
-    "react-native": "0.48.4",
+    "react-native": "0.49.3",
     "react-native-modal-dropdown": "0.5.0",
-    "react-native-router-flux": "4.0.0-beta.22",
+    "react-native-router-flux": "4.0.0-beta.23",
     "react-native-star-rating": "1.0.8",
     "react-native-vector-icons": "4.4.2"
   }
