--- a/packages/react-instantsearch/package.json
+++ b/packages/react-instantsearch/package.json
@@ -1,30 +1,31 @@
 {
   "name": "react-instantsearch",
+  "version": "4.2.0",
+  "description": "⚡ Lightning-fast search for React and React Native apps, by Algolia",
+  "keywords": [
+    "algolia",
+    "components",
+    "fast",
+    "instantsearch",
+    "react",
+    "react-native",
+    "search"
+  ],
+  "homepage": "https://community.algolia.com/react-instantsearch",
+  "license": "MIT",
   "author": {
     "name": "Algolia, Inc.",
     "url": "https://www.algolia.com"
   },
   "main": "index.js",
   "module": "es/index.js",
-  "description": "⚡ Lightning-fast search for React and React Native apps, by Algolia",
-  "keywords": [
-    "react",
-    "search",
-    "fast",
-    "algolia",
-    "instantsearch",
-    "components",
-    "react-native"
-  ],
-  "version": "4.2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/algolia/react-instantsearch"
+  },
   "scripts": {
     "build": "./scripts/build.sh",
     "build-and-publish": "./scripts/build-and-publish.sh"
-  },
-  "homepage": "https://community.algolia.com/react-instantsearch/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/algolia/react-instantsearch/"
   },
   "dependencies": {
     "algoliasearch": "^3.24.0",
@@ -33,7 +34,6 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10"
   },
-  "license": "MIT",
   "devDependencies": {
     "enzyme": "3.2.0",
     "enzyme-adapter-react-16": "1.1.0",
