--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "version": "4.2.0",
+  "version": "4.3.0-beta.0",
   "scripts": {
     "boot": "./scripts/boot.sh",
     "changelog": "conventional-changelog --preset angular --output-unreleased",
