--- a/packages/react-instantsearch-theme-algolia/package.json
+++ b/packages/react-instantsearch-theme-algolia/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-instantsearch-theme-algolia",
   "description": "Algolia theme for React InstantSearch",
-  "version": "4.2.0",
+  "version": "4.3.0-beta.0",
   "homepage": "https://community.algolia.com/react-instantsearch/",
   "repository": {
     "type": "git",
